bison/xml-test-lex/parser/xml.output
Terminals unused in grammar

   COLON


Grammar

    0 $accept: document $end

    1 document: Misc_0_N doctypedecl_Misc_0_N_0_1 element Misc_0_N
    2         | Misc_0_N doctypedecl_Misc_0_N_0_1 error
    3         | Misc_0_N doctypedecl_Misc_0_N_0_1 element Misc_0_N error

    4 Misc_0_N: Misc_0_N Misc
    5         | %empty

    6 Misc: COMMENT
    7     | PI

    8 PI: INFSPECIAL NOM Attribute_0_N SUPSPECIAL
    9   | INFSPECIAL error SUPSPECIAL

   10 doctypedecl_Misc_0_N_0_1: doctypedecl Misc_0_N
   11                         | %empty

   12 doctypedecl: DOCTYPE NOM SUP
   13            | DOCTYPE NOM NOM SUP
   14            | DOCTYPE NOM NOM VALEUR SUP
   15            | DOCTYPE error SUP

   16 Attribute_0_N: Attribute_0_N NOM EGAL VALEUR
   17              | %empty
   18              | Attribute_0_N error NOM EGAL VALEUR

   19 element: INF NOM Attribute_0_N SLASH SUP
   20        | INF NOM Attribute_0_N SUP content INF SLASH NOM SUP
   21        | INF NOM Attribute_0_N SUP content error
   22        | INF NOM Attribute_0_N error SUP content INF SLASH NOM SUP

   23 content: content sub_element
   24        | %empty

   25 sub_element: DONNEES
   26            | element
   27            | CDATABEGIN CDATAEND
   28            | CDATABEGIN error CDATAEND
   29            | PI
   30            | COMMENT


Terminals, with rules where they appear

$end (0) 0
error (256) 2 3 9 15 18 21 22 28
EGAL (258) 16 18
SLASH (259) 19 20 22
SUP (260) 12 13 14 15 19 20 21 22
SUPSPECIAL (261) 8 9
DOCTYPE (262) 12 13 14 15
COLON (263)
INFSPECIAL (264) 8 9
INF (265) 19 20 21 22
CDATABEGIN (266) 27 28
VALEUR (267) 14 16 18
DONNEES (268) 25
COMMENT (269) 6 30
NOM (270) 8 12 13 14 16 18 19 20 21 22
CDATAEND (271) 27 28


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
document (18)
    on left: 1 2 3, on right: 0
Misc_0_N (19)
    on left: 4 5, on right: 1 2 3 4 10
Misc (20)
    on left: 6 7, on right: 4
PI (21)
    on left: 8 9, on right: 7 29
doctypedecl_Misc_0_N_0_1 (22)
    on left: 10 11, on right: 1 2 3
doctypedecl (23)
    on left: 12 13 14 15, on right: 10
Attribute_0_N (24)
    on left: 16 17 18, on right: 8 16 18 19 20 21 22
element (25)
    on left: 19 20 21 22, on right: 1 3 26
content (26)
    on left: 23 24, on right: 20 21 22 23
sub_element (27)
    on left: 25 26 27 28 29 30, on right: 23


State 0

    0 $accept: . document $end

    $default  reduce using rule 5 (Misc_0_N)

    document  go to state 1
    Misc_0_N  go to state 2


State 1

    0 $accept: document . $end

    $end  shift, and go to state 3


State 2

    1 document: Misc_0_N . doctypedecl_Misc_0_N_0_1 element Misc_0_N
    2         | Misc_0_N . doctypedecl_Misc_0_N_0_1 error
    3         | Misc_0_N . doctypedecl_Misc_0_N_0_1 element Misc_0_N error
    4 Misc_0_N: Misc_0_N . Misc

    DOCTYPE     shift, and go to state 4
    INFSPECIAL  shift, and go to state 5
    COMMENT     shift, and go to state 6

    $default  reduce using rule 11 (doctypedecl_Misc_0_N_0_1)

    Misc                      go to state 7
    PI                        go to state 8
    doctypedecl_Misc_0_N_0_1  go to state 9
    doctypedecl               go to state 10


State 3

    0 $accept: document $end .

    $default  accept


State 4

   12 doctypedecl: DOCTYPE . NOM SUP
   13            | DOCTYPE . NOM NOM SUP
   14            | DOCTYPE . NOM NOM VALEUR SUP
   15            | DOCTYPE . error SUP

    error  shift, and go to state 11
    NOM    shift, and go to state 12


State 5

    8 PI: INFSPECIAL . NOM Attribute_0_N SUPSPECIAL
    9   | INFSPECIAL . error SUPSPECIAL

    error  shift, and go to state 13
    NOM    shift, and go to state 14


State 6

    6 Misc: COMMENT .

    $default  reduce using rule 6 (Misc)


State 7

    4 Misc_0_N: Misc_0_N Misc .

    $default  reduce using rule 4 (Misc_0_N)


State 8

    7 Misc: PI .

    $default  reduce using rule 7 (Misc)


State 9

    1 document: Misc_0_N doctypedecl_Misc_0_N_0_1 . element Misc_0_N
    2         | Misc_0_N doctypedecl_Misc_0_N_0_1 . error
    3         | Misc_0_N doctypedecl_Misc_0_N_0_1 . element Misc_0_N error

    error  shift, and go to state 15
    INF    shift, and go to state 16

    element  go to state 17


State 10

   10 doctypedecl_Misc_0_N_0_1: doctypedecl . Misc_0_N

    $default  reduce using rule 5 (Misc_0_N)

    Misc_0_N  go to state 18


State 11

   15 doctypedecl: DOCTYPE error . SUP

    SUP  shift, and go to state 19


State 12

   12 doctypedecl: DOCTYPE NOM . SUP
   13            | DOCTYPE NOM . NOM SUP
   14            | DOCTYPE NOM . NOM VALEUR SUP

    SUP  shift, and go to state 20
    NOM  shift, and go to state 21


State 13

    9 PI: INFSPECIAL error . SUPSPECIAL

    SUPSPECIAL  shift, and go to state 22


State 14

    8 PI: INFSPECIAL NOM . Attribute_0_N SUPSPECIAL

    $default  reduce using rule 17 (Attribute_0_N)

    Attribute_0_N  go to state 23


State 15

    2 document: Misc_0_N doctypedecl_Misc_0_N_0_1 error .

    $default  reduce using rule 2 (document)


State 16

   19 element: INF . NOM Attribute_0_N SLASH SUP
   20        | INF . NOM Attribute_0_N SUP content INF SLASH NOM SUP
   21        | INF . NOM Attribute_0_N SUP content error
   22        | INF . NOM Attribute_0_N error SUP content INF SLASH NOM SUP

    NOM  shift, and go to state 24


State 17

    1 document: Misc_0_N doctypedecl_Misc_0_N_0_1 element . Misc_0_N
    3         | Misc_0_N doctypedecl_Misc_0_N_0_1 element . Misc_0_N error

    $default  reduce using rule 5 (Misc_0_N)

    Misc_0_N  go to state 25


State 18

    4 Misc_0_N: Misc_0_N . Misc
   10 doctypedecl_Misc_0_N_0_1: doctypedecl Misc_0_N .

    INFSPECIAL  shift, and go to state 5
    COMMENT     shift, and go to state 6

    $default  reduce using rule 10 (doctypedecl_Misc_0_N_0_1)

    Misc  go to state 7
    PI    go to state 8


State 19

   15 doctypedecl: DOCTYPE error SUP .

    $default  reduce using rule 15 (doctypedecl)


State 20

   12 doctypedecl: DOCTYPE NOM SUP .

    $default  reduce using rule 12 (doctypedecl)


State 21

   13 doctypedecl: DOCTYPE NOM NOM . SUP
   14            | DOCTYPE NOM NOM . VALEUR SUP

    SUP     shift, and go to state 26
    VALEUR  shift, and go to state 27


State 22

    9 PI: INFSPECIAL error SUPSPECIAL .

    $default  reduce using rule 9 (PI)


State 23

    8 PI: INFSPECIAL NOM Attribute_0_N . SUPSPECIAL
   16 Attribute_0_N: Attribute_0_N . NOM EGAL VALEUR
   18              | Attribute_0_N . error NOM EGAL VALEUR

    error       shift, and go to state 28
    SUPSPECIAL  shift, and go to state 29
    NOM         shift, and go to state 30


State 24

   19 element: INF NOM . Attribute_0_N SLASH SUP
   20        | INF NOM . Attribute_0_N SUP content INF SLASH NOM SUP
   21        | INF NOM . Attribute_0_N SUP content error
   22        | INF NOM . Attribute_0_N error SUP content INF SLASH NOM SUP

    $default  reduce using rule 17 (Attribute_0_N)

    Attribute_0_N  go to state 31


State 25

    1 document: Misc_0_N doctypedecl_Misc_0_N_0_1 element Misc_0_N .
    3         | Misc_0_N doctypedecl_Misc_0_N_0_1 element Misc_0_N . error
    4 Misc_0_N: Misc_0_N . Misc

    error       shift, and go to state 32
    INFSPECIAL  shift, and go to state 5
    COMMENT     shift, and go to state 6

    $end  reduce using rule 1 (document)

    Misc  go to state 7
    PI    go to state 8


State 26

   13 doctypedecl: DOCTYPE NOM NOM SUP .

    $default  reduce using rule 13 (doctypedecl)


State 27

   14 doctypedecl: DOCTYPE NOM NOM VALEUR . SUP

    SUP  shift, and go to state 33


State 28

   18 Attribute_0_N: Attribute_0_N error . NOM EGAL VALEUR

    NOM  shift, and go to state 34


State 29

    8 PI: INFSPECIAL NOM Attribute_0_N SUPSPECIAL .

    $default  reduce using rule 8 (PI)


State 30

   16 Attribute_0_N: Attribute_0_N NOM . EGAL VALEUR

    EGAL  shift, and go to state 35


State 31

   16 Attribute_0_N: Attribute_0_N . NOM EGAL VALEUR
   18              | Attribute_0_N . error NOM EGAL VALEUR
   19 element: INF NOM Attribute_0_N . SLASH SUP
   20        | INF NOM Attribute_0_N . SUP content INF SLASH NOM SUP
   21        | INF NOM Attribute_0_N . SUP content error
   22        | INF NOM Attribute_0_N . error SUP content INF SLASH NOM SUP

    error  shift, and go to state 36
    SLASH  shift, and go to state 37
    SUP    shift, and go to state 38
    NOM    shift, and go to state 30


State 32

    3 document: Misc_0_N doctypedecl_Misc_0_N_0_1 element Misc_0_N error .

    $default  reduce using rule 3 (document)


State 33

   14 doctypedecl: DOCTYPE NOM NOM VALEUR SUP .

    $default  reduce using rule 14 (doctypedecl)


State 34

   18 Attribute_0_N: Attribute_0_N error NOM . EGAL VALEUR

    EGAL  shift, and go to state 39


State 35

   16 Attribute_0_N: Attribute_0_N NOM EGAL . VALEUR

    VALEUR  shift, and go to state 40


State 36

   18 Attribute_0_N: Attribute_0_N error . NOM EGAL VALEUR
   22 element: INF NOM Attribute_0_N error . SUP content INF SLASH NOM SUP

    SUP  shift, and go to state 41
    NOM  shift, and go to state 34


State 37

   19 element: INF NOM Attribute_0_N SLASH . SUP

    SUP  shift, and go to state 42


State 38

   20 element: INF NOM Attribute_0_N SUP . content INF SLASH NOM SUP
   21        | INF NOM Attribute_0_N SUP . content error

    $default  reduce using rule 24 (content)

    content  go to state 43


State 39

   18 Attribute_0_N: Attribute_0_N error NOM EGAL . VALEUR

    VALEUR  shift, and go to state 44


State 40

   16 Attribute_0_N: Attribute_0_N NOM EGAL VALEUR .

    $default  reduce using rule 16 (Attribute_0_N)


State 41

   22 element: INF NOM Attribute_0_N error SUP . content INF SLASH NOM SUP

    $default  reduce using rule 24 (content)

    content  go to state 45


State 42

   19 element: INF NOM Attribute_0_N SLASH SUP .

    $default  reduce using rule 19 (element)


State 43

   20 element: INF NOM Attribute_0_N SUP content . INF SLASH NOM SUP
   21        | INF NOM Attribute_0_N SUP content . error
   23 content: content . sub_element

    error       shift, and go to state 46
    INFSPECIAL  shift, and go to state 5
    INF         shift, and go to state 47
    CDATABEGIN  shift, and go to state 48
    DONNEES     shift, and go to state 49
    COMMENT     shift, and go to state 50

    PI           go to state 51
    element      go to state 52
    sub_element  go to state 53


State 44

   18 Attribute_0_N: Attribute_0_N error NOM EGAL VALEUR .

    $default  reduce using rule 18 (Attribute_0_N)


State 45

   22 element: INF NOM Attribute_0_N error SUP content . INF SLASH NOM SUP
   23 content: content . sub_element

    INFSPECIAL  shift, and go to state 5
    INF         shift, and go to state 54
    CDATABEGIN  shift, and go to state 48
    DONNEES     shift, and go to state 49
    COMMENT     shift, and go to state 50

    PI           go to state 51
    element      go to state 52
    sub_element  go to state 53


State 46

   21 element: INF NOM Attribute_0_N SUP content error .

    $default  reduce using rule 21 (element)


State 47

   19 element: INF . NOM Attribute_0_N SLASH SUP
   20        | INF . NOM Attribute_0_N SUP content INF SLASH NOM SUP
   20        | INF NOM Attribute_0_N SUP content INF . SLASH NOM SUP
   21        | INF . NOM Attribute_0_N SUP content error
   22        | INF . NOM Attribute_0_N error SUP content INF SLASH NOM SUP

    SLASH  shift, and go to state 55
    NOM    shift, and go to state 24


State 48

   27 sub_element: CDATABEGIN . CDATAEND
   28            | CDATABEGIN . error CDATAEND

    error     shift, and go to state 56
    CDATAEND  shift, and go to state 57


State 49

   25 sub_element: DONNEES .

    $default  reduce using rule 25 (sub_element)


State 50

   30 sub_element: COMMENT .

    $default  reduce using rule 30 (sub_element)


State 51

   29 sub_element: PI .

    $default  reduce using rule 29 (sub_element)


State 52

   26 sub_element: element .

    $default  reduce using rule 26 (sub_element)


State 53

   23 content: content sub_element .

    $default  reduce using rule 23 (content)


State 54

   19 element: INF . NOM Attribute_0_N SLASH SUP
   20        | INF . NOM Attribute_0_N SUP content INF SLASH NOM SUP
   21        | INF . NOM Attribute_0_N SUP content error
   22        | INF . NOM Attribute_0_N error SUP content INF SLASH NOM SUP
   22        | INF NOM Attribute_0_N error SUP content INF . SLASH NOM SUP

    SLASH  shift, and go to state 58
    NOM    shift, and go to state 24


State 55

   20 element: INF NOM Attribute_0_N SUP content INF SLASH . NOM SUP

    NOM  shift, and go to state 59


State 56

   28 sub_element: CDATABEGIN error . CDATAEND

    CDATAEND  shift, and go to state 60


State 57

   27 sub_element: CDATABEGIN CDATAEND .

    $default  reduce using rule 27 (sub_element)


State 58

   22 element: INF NOM Attribute_0_N error SUP content INF SLASH . NOM SUP

    NOM  shift, and go to state 61


State 59

   20 element: INF NOM Attribute_0_N SUP content INF SLASH NOM . SUP

    SUP  shift, and go to state 62


State 60

   28 sub_element: CDATABEGIN error CDATAEND .

    $default  reduce using rule 28 (sub_element)


State 61

   22 element: INF NOM Attribute_0_N error SUP content INF SLASH NOM . SUP

    SUP  shift, and go to state 63


State 62

   20 element: INF NOM Attribute_0_N SUP content INF SLASH NOM SUP .

    $default  reduce using rule 20 (element)


State 63

   22 element: INF NOM Attribute_0_N error SUP content INF SLASH NOM SUP .

    $default  reduce using rule 22 (element)

